working on jekyll theme

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,9 @@
 </footer>
 
 <script src="/js/main.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
+
 </body>
 
 </html>
