--- a/_includes/home_header.html
+++ b/_includes/home_header.html
@@ -1,18 +1,7 @@
 <div id="home_header">
-    {% include top.html %}
+    {% include header.html %}
 
     <div id="render"></div>
-
-    <!--
-    <div id="links">
-        <a href="http://github.com/Makio135" target="_blank"><i class="fa fa-github fa-fw"></i></a>
-        <a href="http://twitter.com/Makio135" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
-        <a href="mailto:lionel@makio135.com" target="_blank"><i class="fa fa-envelope fa-fw"></i></a>
-    </div>
-    -->
-
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="https://cdn.rawgit.com/riccardoscalco/textures/master/textures.min.js"></script>
     <script src="/js/home_header.js"></script>
 </div>
