--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,11 +7,11 @@
 @import
     "reset",
     "fonts",
+    "homeheader",
     "header",
     "grid",
     "post",
-    "footer",
-    "homeheader";
+    "footer";
 
 * {
     margin: 0;
