--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
-<a href="/">
-    <header>
-        <h1>Makio135</h1>
-    </header>
-</a>
+<div id="top">
+    <nav>
+        <div id="nav-logo"></div>
+        <div id="nav-title">Makio135</div>
+    </nav>
+    <script src="/js/header.js"></script>
+</div>
