--- a/scss/_homeheader.scss
+++ b/scss/_homeheader.scss
@@ -1,28 +1,7 @@
 #home_header {
+    background: #050011;
+
     #top{
         position: absolute;
-
-        nav{
-            width: 100%;
-            height: 55px;
-            margin: 20px 20px 0;
-            z-index: 999;
-
-            div{
-                display: inline;
-            }
-
-            #nav-title{
-                color: #FFF;
-                font-weight: 300;
-                font-size: 47px;
-                line-height: 35px;
-            }
-
-            #nav-logo > svg > path{
-                stroke: none;
-                fill: #FFF;
-            }
-        }
     }
 }
