--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -1,15 +1,18 @@
 .post{
     max-width: 1200px;
     margin: auto;
+    margin-top: 40px;
     text-align: center;
-    
+    background-color: rgba( 255, 255, 255, 0.1 );
+    padding: 20px;
+
     h1{
         text-align: left;
         color: #fff;
         font-size: 16px;
         font-weight: 400;
         text-transform: uppercase;
-        
+
         a{
             color: #fff;
             text-decoration: none;
@@ -33,7 +36,7 @@
         white-space: -pre-wrap;      /* Opera 4-6 */
         white-space: -o-pre-wrap;    /* Opera 7 */
         word-wrap: break-word;       /* Internet Explorer 5.5+ */
-        
+
         code{
             text-align: left;
             border-radius: 2px;
