--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer>
 </footer>
 
+<script src="https://cdn.rawgit.com/MAKIO135/console.chart/master/console.chart.js"></script>
 <script src="/js/main.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
