--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -2,15 +2,15 @@
     max-width: 1200px;
     margin: auto;
     margin-top: 40px;
-    text-align: center;
+    text-align: left;
     background-color: rgba( 255, 255, 255, 0.1 );
+    color: #fff;
+
     padding: 20px;
 
     h1{
-        text-align: left;
-        color: #fff;
         font-size: 16px;
-        font-weight: 400;
+        font-weight: 600;
         text-transform: uppercase;
 
         a{
@@ -20,12 +20,20 @@
 
         small{
             font-size: 12px;
-            font-weight: 200;
+            font-weight: 400;
         }
     }
 
     hr{
         margin: 20px 0;
+    }
+
+    p, img, iframe{
+        margin-bottom: 20px;
+    }
+
+    .large{
+        width: 100%;
     }
 
     pre {
