--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,11 @@
 <footer>
+    <div id="links">
+        <a href="http://codepen.io/makio135" target="_blank"><i class="fa fa-codepen fa-2x"></i></a>
+        <a href="http://github.com/makio135" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+        <a href="http://makio135.tumblr.com/" target="_blank"><i class="fa fa-tumblr fa-2x"></i></a>
+        <a href="http://twitter.com/makio135" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+        <a href="mailto:lionel@makio135.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a>
+    </div>
 </footer>
 
 <script src="https://cdn.rawgit.com/MAKIO135/console.chart/master/console.chart.js"></script>
