--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
 
     <!-- CSS Reset + Font-Awesome -->
     <link rel="stylesheet" href="{{ "/scss/normalize.css" | prepend:site.baseurl }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="{{ "/scss/main.css" | prepend: site.baseurl }}">
@@ -20,7 +21,7 @@
 
     <meta name="theme-color" content="#050011">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="icon" sizes="192x192" href="high-res-icon.png">
+    <link rel="icon" sizes="192x192" href="/high-res-icon.png">
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
