--- a/_includes/grid.html
+++ b/_includes/grid.html
@@ -1,4 +1,4 @@
-<div id="grid">
+<div id="grid" style="display:none;">
     {% capture nbPosts %}{{ include.collection.size | minus:1 }}{% endcapture %}
     {% assign inColumn = false %}
 
@@ -18,3 +18,8 @@
 </div>
 
 <script src="/js/grid.js"></script>
+<script>
+    window.addEventListener( 'load', function(){
+        document.querySelector( '#grid' ).style.display = 'block';
+    } );
+</script>
