fix grid flex display

--- a/_includes/grid.html
+++ b/_includes/grid.html
@@ -20,6 +20,6 @@
 <script src="/js/grid.js"></script>
 <script>
     window.addEventListener( 'load', function(){
-        document.querySelector( '#grid' ).style.display = 'block';
+        document.querySelector( '#grid' ).style.display = 'flex';
     } );
 </script>
